# rust-ffmpeg4-sys

./: Cargo.toml  build.rs  ffmpeg_configure_tiny.sh  ffmpeg_configure_tiny_linux.sh  instructions.txt
builds/aarch64-aaple-darwin/lib/pkgconfig/: libavformat.pc  libswresample.pc
builds/aarch64-apple-darwin/lib/pkgconfig/: libavcodec.pc  libavutil.pc
builds/aarch64-pc-windows-msvc/: CONTROL
builds/aarch64-pc-windows-msvc/lib/: libmp3lame-static.lib  libmp3lame.lib  libmpghip-static.lib  swresample.lib
builds/aarch64-pc-windows-msvc/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
builds/aarch64-pc-windows-msvc/share/ffmpeg-tiny/: FindFFMPEG.cmake  vcpkg.spdx.json  vcpkg_abi_info.txt
builds/x86_64-apple-darwin/lib/pkgconfig/: libavcodec.pc  libavformat.pc  libavutil.pc  libswresample.pc
builds/x86_64-pc-windows-msvc/: CONTROL
builds/x86_64-pc-windows-msvc/lib/: libmp3lame-static.lib  libmp3lame.lib  libmpghip-static.lib  swresample.lib
builds/x86_64-pc-windows-msvc/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
builds/x86_64-pc-windows-msvc/share/ffmpeg-bp/: FindFFMPEG.cmake  vcpkg_abi_info.txt
builds/x86_64-pc-windows-msvc/share/ffmpeg-tiny/: vcpkg.spdx.json  vcpkg_abi_info.txt
builds/x86_64-unknown-linux-gnu/lib/pkgconfig/: libavcodec.pc  libavformat.pc  libavutil.pc  libswresample.pc
src/avutil/: pixfmt.rs
