[package]
name    = "ffmpeg4-sys"
version = "4.2.2"
build   = "build.rs"
links   = "ffmpeg"

authors = [
    "meh. <meh@schizofreni.co>",
    "Vasily Chekalkin <bacek@bacek.com>",
]
license = "WTFPL"

description = "FFI bindings to FFmpeg"
repository  = "https://github.com/bacek/rust-ffmpeg4-sys"
keywords    = ["audio", "video"]
# Don't package ffmpeg submodule
exclude     = [
    "ffmpeg"
]

[lib]
# Disable doctests as a workaround for https://github.com/rust-lang/rust-bindgen/issues/1313
doctest = false

[dependencies]
libc = "^0.2"

[build-dependencies]
cc         = "^1"
pkg-config = "^0.3"
bindgen    = "^0.59"

[features]
default  = ["avcodec", "avformat", "swresample", "build", "static", "common-audio"]

static = []
tiny = []
build  = ["static"]

# docs without yasm
build-disable-x86asm = ["build"]

# licensing
build-license-gpl      = ["build"]
build-license-nonfree  = ["build"]
build-license-version3 = ["build"]

# misc
build-nvenc = ["build"]
build-zlib  = ["build"]

# ssl
build-lib-gnutls  = ["build"]
build-lib-openssl = ["build"]

# filters
build-lib-fontconfig = ["build"]
build-lib-frei0r     = ["build"]
build-lib-ladspa     = ["build"]
build-lib-ass        = ["build"]
build-lib-freetype   = ["build"]
build-lib-freebidi   = ["build"]
build-lib-opencv     = ["build"]

# encoders/decoders
build-lib-celt             = ["build"]
build-lib-fdk-aac          = ["build"]
build-lib-gsm              = ["build"]
build-lib-ilbc             = ["build"]
build-lib-kvazaar          = ["build"]
build-lib-mp3lame          = ["build"]
build-lib-opencore-amrnb   = ["build"]
build-lib-opencore-amrwb   = ["build"]
build-lib-openh264         = ["build"]
build-lib-openjpeg         = ["build"]
build-lib-opus             = ["build"]
build-lib-shine            = ["build"]
build-lib-snappy           = ["build"]
build-lib-speex            = ["build"]
build-lib-theora           = ["build"]
build-lib-twolame          = ["build"]
build-lib-vo-amrwbenc      = ["build"]
build-lib-vorbis           = ["build"]
build-lib-vpx              = ["build"]
build-lib-wavpack          = ["build"]
build-lib-webp             = ["build"]
build-lib-x264             = ["build"]
build-lib-x265             = ["build"]
build-lib-xvid             = ["build"]

# protocol libs
build-lib-smbclient = ["build"]
build-lib-ssh       = ["build"]

# enable support common audio codec/formats (aac, alac, flac, wav, aiff, mp3)
common-audio        = ["build", "tiny", "build-lib-mp3lame"]

# components
avcodec    = []
avdevice   = ["avformat"]
avfilter   = []
avformat   = ["avcodec"]
avresample = []
postproc   = []
swresample = []
swscale    = []

[package.metadata.docs.rs]
features = ["build-disable-x86asm"]
no-default-features = true

[badges]
travis-ci = { repository="bacek/rust-ffmpeg4-sys", branch="master" }
maintenance = { status = "passively-maintained" }
